# lazyrepr

./: .gitignore  README.md  noxfile.py  pyproject.toml  tasks.py  tox.ini  tox.toml
.github/workflows/: python-package.yml
extras/: missing-value.ipynb  mock-printer.ipynb  repr-mixin.ipynb  talib-functions.ipynb
src/: lazyrepr.py
src/lazyrepr/: __init__.py
tests/: mock_printer.py  test_lazyrepr.py
