[build-system]
requires = [ "hatchling"]
build-backend = "hatchling.build"

[project]
name = "lazyrepr"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.9"
description = "Mixin class for concise object representation"
keywords = ["repr", "mixin"]
authors = [ {"name" = "furechan", "email" = "furechan@xsmail.com"} ]
urls.homepage = "https://github.com/furechan/lazyrepr"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [ "ipykernel", "pytest" ]

[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = [ "-p no:cacheprovider"]
testpaths = ["tests"]

