[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.8.0,<0.9.0"]
# See https://docs.astral.sh/uv/concepts/build-backend/

[tool.uv.build-backend]
module-name = "lazyrepr"

[project]
name = "lazyrepr"
version = "0.0.5"
readme = "README.md"
requires-python = ">=3.9"
description = "Mixin class for concise object representation"
keywords = ["repr", "mixin"]
authors = [ {"name" = "furechan", "email" = "furechan@xsmail.com"} ]
urls.homepage = "https://github.com/furechan/lazyrepr"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[dependency-groups]
dev = [ "ipykernel", "pytest" ]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = [ "-p no:cacheprovider"]
testpaths = ["tests"]

